GNOME Bugzilla – Bug 703668
codecparsers: mpeg2: fix video packet header size checks
Last modified: 2013-07-08 09:22:18 UTC
Created attachment 248468 [details] [review] codecparsers: mpeg2: fix video packet header size checks Hi, this patch fixes a few video packet header size checks: - Sequence Header: 64 bits ; - Sequence Scalable Extension: 10 bits ; - Slice Header: 6 bits Sorry for the oversight.
Comment on attachment 248468 [details] [review] codecparsers: mpeg2: fix video packet header size checks Thanks. Feel free to push small things like this (which don't touch API) directly in future.
commit 5ad6f2d4a0a93fcca5c779025a7e96757da082ac Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Fri Jul 5 18:33:42 2013 +0200 codecparsers: mpeg2: fix video packet header size checks. Fix video packet header size checks for: - Sequence Header: 64 bits ; - Sequence Scalable Extension: 10 bits ; - Slice Header: 6 bits. https://bugzilla.gnome.org/show_bug.cgi?id=703668 Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>